# chartwork

./: CMakeLists.txt  LICENSE  README.md
include/chartwork/: BarChart.h  Chart.h  ColorPalette.h  Design.h  GridChart.h  GroupedBarChart.h  Histogram.h  LinePlot.h  PieChart.h  ScatterPlot.h  StackedBarChart.h  XYPlot.h
include/chartwork/elements/: Axis.h  Background.h  Key.h  Symbol.h  Title.h
include/chartwork/exceptions/: EmptyException.h  OutOfRangeException.h  UnknownItemException.h
include/chartwork/plugins/: ChartworkPluginCollection.h  GridChartPlugin.h  GroupedBarChartPlugin.h  HistogramPlugin.h  LinePlotPlugin.h  PieChartPlugin.h  ScatterPlotPlugin.h  StackedBarChartPlugin.h
packaging/mac/: README.md  package.py  settings.py.example
packaging/mac/installer/: CMakeLists.txt  icon.icns  images.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
packaging/new-project/: Makefile  mainwindow.cpp  mainwindow.h  mainwindow.ui  project.pro
packaging/windows/: README.md  package.py  settings.py.example
packaging/windows/installer/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  msvcr.rc  msvcrt.manifest
src/: CMakeLists.txt
src/chartwork/: BarChart.cpp  Chart.cpp  ColorPalette.cpp  GridChart.cpp  GroupedBarChart.cpp  Histogram.cpp  LinePlot.cpp  PieChart.cpp  ScatterPlot.cpp  StackedBarChart.cpp  XYPlot.cpp  icons.qrc
src/chartwork/elements/: Axis.cpp  Background.cpp  Key.cpp  Symbol.cpp  Title.cpp
src/chartwork/exceptions/: EmptyException.cpp  OutOfRangeException.cpp  UnknownItemException.cpp
src/chartwork/plugins/: ChartworkPluginCollection.cpp  GridChartPlugin.cpp  GroupedBarChartPlugin.cpp  HistogramPlugin.cpp  LinePlotPlugin.cpp  PieChartPlugin.cpp  ScatterPlotPlugin.cpp  StackedBarChartPlugin.cpp
